--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3307/test
 spring.datasource.username=root
 spring.datasource.password=hung11pp
 spring.liquibase.change-log=classpath:db/changelog/db-changelog.xml
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 spring.redis.host=localhost
 spring.redis.port=6379
