--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,6 @@
-changelogFile:./db/changelog/db-changelog.xml
-driver:com.mysql.jdbc.Driver
-url:jdbc:mysql://localhost:3307/test
-username:root
-password:hung11pp
+spring.datasource.url=jdbc:mysql://localhost:3307/test
+spring.datasource.username=root
+spring.datasource.password=hung11pp
+spring.liquibase.change-log=classpath:db/changelog/db-changelog.xml
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
